changing the description component

--- a/projects/mercat-kzero-web/src/app/views/description/description/description.component.html
+++ b/projects/mercat-kzero-web/src/app/views/description/description/description.component.html
@@ -1,9 +1,15 @@
-<div class="description">
-  <img alt="" class="logo" src="assets/img/logo2.png" />
-  <p i18n>
-    By consuming local products, you contribute to the local economy, <br />
-    generate fewer emissions to the environment and, among other things, <br />
-    you feed on fresher and therefore healthier products since they come directly <br />
-    <strong>from the orchard to the table.</strong>
-  </p>
+<div class="conteiner">
+  <div class="img"></div>
+  <div class="description">
+    <h1>
+      MerkatKazero
+    </h1>
+
+    <p i18n>
+      By consuming local products, you contribute to the local economy, generate fewer emissions to the environment and,
+      among other things, you feed on fresher and therefore healthier products since they come directly:
+    </p>
+    <br />
+    <h2>From the <span>Orchard</span> to your table.</h2>
+  </div>
 </div>
