Styling de header

--- a/projects/mercat-kzero-web/src/app/views/description/description/description.component.scss
+++ b/projects/mercat-kzero-web/src/app/views/description/description/description.component.scss
@@ -48,6 +48,7 @@
       h1 {
         font-size: 45px;
         margin-bottom: 40px;
+        line-height: 0.8;
       }
       p {
         text-align: justify;
