Adding distribuitor component

--- a/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.html
+++ b/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.html
@@ -3,6 +3,7 @@
 </section>
 <section class="provider">
   <div class="information-content">
+    <app-distribuitors></app-distribuitors>
     <p i18n class="category">KZero farms and sellers</p>
     <p i18n class="short-description mat-display-1">From the farm to your table.</p>
     <p i18n class="instructions">
