rename cart store service

--- a/projects/mercat-kzero-web/src/app/views/global-area/header-cart/header-cart.component.html
+++ b/projects/mercat-kzero-web/src/app/views/global-area/header-cart/header-cart.component.html
@@ -1,14 +1,14 @@
 <button (click)="$event.stopPropagation()" [matMenuTriggerFor]="cart" mat-button>
   <mat-icon
     [matBadgeSize]="'small'"
-    [matBadge]="getCartBadge(cartService?.cartItems?.selected?.length)"
-    [class.active]="!cartService.cartItems.isEmpty()"
+    [matBadge]="getCartBadge(cartStoreService?.cartItems?.selected?.length)"
+    [class.active]="!cartStoreService.cartItems.isEmpty()"
     >shopping_cart</mat-icon
   >
 </button>
 <mat-menu #cart="matMenu">
   <mat-list>
-    <ng-container *ngIf="cartService.cartItems.isEmpty(); else cartList">
+    <ng-container *ngIf="cartStoreService.cartItems.isEmpty(); else cartList">
       <h3 i18n matSubheader>Your cart is empty!</h3>
     </ng-container>
   </mat-list>
@@ -16,14 +16,14 @@
 
 <ng-template #cartList>
   <h3 i18n matSubheader>Your selected products:</h3>
-  <mat-list-item *ngFor="let cartItem of cartService.cartItems.selected">
+  <mat-list-item *ngFor="let cartItem of cartStoreService.cartItems.selected">
     <img alt="{{ cartItem.product.name }}" matListAvatar src="{{ cartItem.product.image }}" />
     <h3 matLine>{{ cartItem.product.name }}</h3>
     <p matLine>
       <span> {{ cartItem.amount }} {{ cartItem.product.measurementUnit }} </span>
       <span class="demo-2"> -- {{ cartItem.amount * cartItem.product.price | currency: 'EUR' }} </span>
     </p>
-    <button (click)="$event.stopPropagation(); cartService.deselect(cartItem)" mat-icon-button>
+    <button (click)="$event.stopPropagation(); cartStoreService.deselect(cartItem)" mat-icon-button>
       <mat-icon>cancel</mat-icon>
     </button>
   </mat-list-item>
@@ -31,6 +31,6 @@
   <div class="price-total">
     <span class="mat-h2" i18n>Total price:</span>
     <span class="flex-spacer"></span>
-    <span class="mat-h2">{{ cartService.totalPrice | async | currency: 'EUR' }}</span>
+    <span class="mat-h2">{{ cartStoreService.totalPrice | async | currency: 'EUR' }}</span>
   </div>
 </ng-template>
