rename producer store service

--- a/projects/mercat-kzero-web/src/app/views/orchard/orchard-list/orchard-list.component.html
+++ b/projects/mercat-kzero-web/src/app/views/orchard/orchard-list/orchard-list.component.html
@@ -1,5 +1,5 @@
 <mat-list>
-  <mat-list-item *ngFor="let producer of producerService.producers$ | async">
+  <mat-list-item *ngFor="let producer of producerStoreService.producers$ | async">
     <p i18n matLine>Provider</p>
     <h2 matLine class="mat-h2">{{ producer.displayName }}</h2>
     <div matLine></div>
