--- a/projects/mercat-kzero-web/src/app/views/distribuitors/distribuitors/distribuitors.component.html
+++ b/projects/mercat-kzero-web/src/app/views/distribuitors/distribuitors/distribuitors.component.html
@@ -1,1 +1,53 @@
-<p>distribuitors works!</p>
+<mat-card class="card mat-elevation-z-0">
+  <div class="cont-img">
+    <img src="assets/img/distribuitor.jpg" alt="" />
+  </div>
+  <mat-card-content class="info">
+    <p>carrer de maria isabel. Vilanova</p>
+    <mat-card-title>
+      L`hort de la Lourdes
+    </mat-card-title>
+
+    <div class="categories">
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+    </div>
+  </mat-card-content>
+</mat-card>
+<mat-card class="card mat-elevation-z-0">
+  <div class="cont-img">
+    <img src="assets/img/distribuitor.jpg" alt="" />
+  </div>
+  <mat-card-content class="info">
+    <p>carrer de maria isabel. Vilanova</p>
+    <mat-card-title>
+      L`hort de la Lourdes
+    </mat-card-title>
+
+    <div class="categories">
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+    </div>
+  </mat-card-content>
+</mat-card>
+<mat-card class="card mat-elevation-z-0">
+  <div class="cont-img">
+    <img src="assets/img/distribuitor.jpg" alt="" />
+  </div>
+  <mat-card-content class="info">
+    <p>carrer de maria isabel. Vilanova</p>
+    <mat-card-title>
+      L`hort de la Lourdes
+    </mat-card-title>
+    <div class="categories">
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+      <mat-icon>eco</mat-icon>
+    </div>
+  </mat-card-content>
+</mat-card>
