improving distribuitor styles

--- a/projects/mercat-kzero-web/src/app/views/distribuitors/distribuitors/distribuitors.component.html
+++ b/projects/mercat-kzero-web/src/app/views/distribuitors/distribuitors/distribuitors.component.html
@@ -1,7 +1,6 @@
-<mat-card class="card mat-elevation-z-0">
-  <div class="cont-img">
-    <img src="assets/img/distribuitor.jpg" alt="" />
-  </div>
+<mat-card class="card">
+  <img class="cont-img" src="assets/img/distribuitor.jpg" alt="" />
+
   <mat-card-content class="info">
     <p>carrer de maria isabel. Vilanova</p>
     <mat-card-title>
@@ -16,10 +15,9 @@
     </div>
   </mat-card-content>
 </mat-card>
-<mat-card class="card mat-elevation-z-0">
-  <div class="cont-img">
-    <img src="assets/img/distribuitor.jpg" alt="" />
-  </div>
+<mat-card class="card">
+  <img class="cont-img" src="assets/img/distribuitor.jpg" alt="" />
+
   <mat-card-content class="info">
     <p>carrer de maria isabel. Vilanova</p>
     <mat-card-title>
@@ -34,15 +32,16 @@
     </div>
   </mat-card-content>
 </mat-card>
-<mat-card class="card mat-elevation-z-0">
-  <div class="cont-img">
-    <img src="assets/img/distribuitor.jpg" alt="" />
-  </div>
+
+<mat-card class="card">
+  <img class="cont-img" src="assets/img/distribuitor.jpg" alt="" />
+
   <mat-card-content class="info">
     <p>carrer de maria isabel. Vilanova</p>
     <mat-card-title>
       L`hort de la Lourdes
     </mat-card-title>
+
     <div class="categories">
       <mat-icon>eco</mat-icon>
       <mat-icon>eco</mat-icon>
