--- a/projects/mercat-kzero-web/src/app/views/distribuitors/distribuitors/distribuitors.component.scss
+++ b/projects/mercat-kzero-web/src/app/views/distribuitors/distribuitors/distribuitors.component.scss
@@ -4,18 +4,16 @@
   padding: 0;
   width: 300px;
   align-items: center;
+  cursor: pointer;
 
   .cont-img {
     width: 50%;
-  }
-
-  .cont-img img {
-    width: 100%;
     height: 100%;
     border-radius: 3px;
   }
+
   .info {
-    padding: 10px;
+    padding-left: 10px;
     .mat-card-title {
       font-size: 12px;
     }
@@ -41,14 +39,6 @@
       font-size: 12px !important;
       line-height: 1;
       margin-bottom: 10px !important;
-    }
-
-    .cont-img {
-      width: 55%;
-    }
-
-    .cont-img img {
-      height: 100% !important;
     }
   }
 }
