--- a/projects/tu-cita/src/app/app.component.scss
+++ b/projects/tu-cita/src/app/app.component.scss
@@ -1,6 +1,9 @@
-:host {
-  display: block;
-  width: 100%;
-  height: 100vh;
-  box-sizing: border-box;
+.search-box {
+  position: absolute;
+  top: 0;
+  margin: 10px;
+
+  .mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: white;
+  }
 }
