--- a/projects/tu-cita/src/app/app.component.html
+++ b/projects/tu-cita/src/app/app.component.html
@@ -1,9 +1,1 @@
-<app-product-map></app-product-map>
-<div>
-  <div class="search-box">
-    <mat-form-field appearance="fill">
-      <mat-label>Search here...</mat-label>
-      <input matInput />
-    </mat-form-field>
-  </div>
-</div>
+<router-outlet></router-outlet>
