--- a/projects/tu-cita/src/app/map-view/map-view/map-view.component.scss
+++ b/projects/tu-cita/src/app/map-view/map-view/map-view.component.scss
@@ -7,3 +7,8 @@
     background-color: white;
   }
 }
+
+button.gm-control-active.gm-fullscreen-control {
+  width: 50px !important;
+  height: 50px !important;
+}
