add navigation on product clic

--- a/projects/tu-cita/src/app/map-view/map-view/map-view.component.html
+++ b/projects/tu-cita/src/app/map-view/map-view/map-view.component.html
@@ -1,4 +1,4 @@
-<app-product-map></app-product-map>
+<app-product-map (markerClicked)="onMarkerClicked($event)"></app-product-map>
 <div>
   <div class="search-box">
     <mat-form-field appearance="fill">
