Creating the reservation and reservationDetails component

--- a/projects/tu-cita/src/app/app.component.html
+++ b/projects/tu-cita/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div>
   <div class="search-box">
     <mat-form-field appearance="fill">
-      <mat-label>Search here...</mat-label>
+      <mat-label (keyup.enter)="navigate()">Search here...</mat-label>
       <input matInput />
     </mat-form-field>
   </div>
