--- a/projects/tu-cita/src/app/components/reservation/reservation.component.scss
+++ b/projects/tu-cita/src/app/components/reservation/reservation.component.scss
@@ -2,14 +2,15 @@
   margin: 0px, auto;
   width: 100%;
   text-align: center;
+  padding: 16px 0;
+
   .form {
+    display: flex;
+    flex-direction: column;
     margin-top: 20px;
     text-align: center;
-    .submit {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+    margin: 18px auto;
+    max-width: 350px;
   }
 
   h1 {
