Creating confirmation component

--- a/projects/tu-cita/src/app/components/reservation/reservation.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation.component.html
@@ -48,7 +48,7 @@
       mat-stroked-button
       color="primary"
       type="submit"
-      [routerLink]="['/reservationDetails']"
+      [routerLink]="['/confirmation']"
     >
       Reservar
     </button>
