--- a/projects/tu-cita/src/app/components/map-view/map-view/map-view.component.html
+++ b/projects/tu-cita/src/app/components/map-view/map-view/map-view.component.html
@@ -1,9 +1,7 @@
-<app-product-map (markerClicked)="onMarkerClicked($event)"></app-product-map>
-<div>
-  <div class="search-box">
-    <mat-form-field appearance="fill">
-      <mat-label>Search here...</mat-label>
-      <input matInput />
-    </mat-form-field>
-  </div>
+<app-product-map (markerClicked)="onMarkerClicked()"></app-product-map>
+<div class="search-box">
+  <mat-form-field appearance="fill">
+    <mat-label>Search here...</mat-label>
+    <input matInput />
+  </mat-form-field>
 </div>
