adding the reservation sumary component

--- a/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.html
@@ -7,9 +7,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-icon-button>
-    <mat-icon>add_circle_outline</mat-icon>
-  </button>
-  <p class="add-reservation">Add another reservation</p>
-  <button mat-raised-button mat-dialog-close mat-dialog-close="true">Confirm Reservation</button>
+  <button color="primary" mat-raised-button mat-dialog-close mat-dialog-close="true">Confirm Reservation</button>
+  <button color="accent" mat-raised-button mat-dialog-close mat-dialog-close="false">Cancel Reservation</button>
 </mat-dialog-actions>
