--- a/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.html
@@ -7,6 +7,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button color="primary" mat-raised-button mat-dialog-close mat-dialog-close="true">Confirm Reservation</button>
-  <button color="accent" mat-raised-button mat-dialog-close mat-dialog-close="false">Cancel Reservation</button>
+  <button color="primary" mat-dialog-close="true" mat-raised-button>Confirm Reservation</button>
+  <button color="accent" mat-dialog-close="false" mat-raised-button>Cancel Reservation</button>
 </mat-dialog-actions>
