--- a/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
@@ -1,1 +1,2 @@
-<p>reservation-summary works!</p>
+<h1>Congrats, your reservation is now confirmed!</h1>
+<app-reservation-details [reservation]="reservationService.getReservation() | async"></app-reservation-details>
