--- a/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
@@ -1,5 +1,7 @@
-<p>Name: {{ client.name }}</p>
-<p>Service: {{ client.service }}</p>
-<p>Employer: {{ client.employee }}</p>
-<p>Date: {{ client.date }}</p>
-<p>Time: {{ client.time }}</p>
+<ng-container *ngIf="reservation">
+  <p>Name: {{ reservation.name }}</p>
+  <p>Service: {{ reservation.serviceType }}</p>
+  <p>Employer: {{ reservation.employee }}</p>
+  <p>Date: {{ reservation.date }}</p>
+  <p>Time: {{ reservation.time }}</p>
+</ng-container>
