--- a/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
@@ -1,2 +1,16 @@
-<h1>Congrats, your reservation is now confirmed!</h1>
-<app-reservation-details [reservation]="reservationService.getReservation() | async"></app-reservation-details>
+<div class="conteiner">
+  <h1 class="title">Congrats, your reservation is now confirmed!</h1>
+  <app-reservation-details [reservation]="reservationService.getReservation() | async"></app-reservation-details>
+  <div class="add">
+    <button mat-icon-button color="primary">
+      <mat-icon>event_available</mat-icon>
+    </button>
+    <p>Add to calendar</p>
+  </div>
+  <div class="add">
+    <button mat-icon-button color="primary">
+      <mat-icon>add_circle</mat-icon>
+    </button>
+    <p>Make another reservation</p>
+  </div>
+</div>
