--- a/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
@@ -7,7 +7,7 @@
     </button>
     <p>Add to calendar</p>
   </div>
-  <div class="add">
+  <div class="add" [routerLink]="['/reservation']">
     <button mat-icon-button color="primary">
       <mat-icon>add_circle</mat-icon>
     </button>
