--- a/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
@@ -1,4 +1,4 @@
-<div class="conteiner">
+<div class="container">
   <h1 class="title">Congrats, your reservation is now confirmed!</h1>
   <app-reservation-details [reservation]="reservationService.getReservation() | async"></app-reservation-details>
   <div class="add">
