improve dialog ui

--- a/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
@@ -47,7 +47,7 @@
       [disabled]="reservationForm.invalid"
       class="button"
       color="primary"
-      mat-stroked-button
+      mat-raised-button
       type="submit"
     >
       Create reservation
