--- a/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.html
@@ -7,6 +7,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button color="primary" [mat-dialog-close]="true" mat-raised-button>Confirm Reservation</button>
-  <button mat-dialog-close mat-raised-button>Cancel Reservation</button>
+  <button mat-dialog-close mat-flat-button>Cancel</button>
+  <button color="primary" [mat-dialog-close]="true" mat-flat-button>Confirm Reservation</button>
 </mat-dialog-actions>
