--- a/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.scss
+++ b/projects/tu-cita/src/app/components/reservation/reservation-confirm/reservation-confirm.component.scss
@@ -1,14 +1,4 @@
-h1 {
-  text-align: center;
-}
-
 .mat-dialog-actions {
-  margin-bottom: 20px;
-  justify-content: center;
   display: flex;
-
-  button {
-    margin: 10px auto;
-    width: 180px;
-  }
+  flex-flow: row nowrap;
 }
