set bold to summary categories

--- a/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="reservation">
-  <p>Name: {{ reservation.name }}</p>
-  <p>Service: {{ reservation.serviceType }}</p>
-  <p>Employer: {{ reservation.employee }}</p>
-  <p>Date: {{ reservation.date }}</p>
-  <p>Time: {{ reservation.time }}</p>
+  <p><b>Name:</b> {{ reservation.name }}</p>
+  <p><b>Service:</b> {{ reservation.serviceType }}</p>
+  <p><b>Employer:</b> {{ reservation.employee }}</p>
+  <p><b>Date:</b> {{ reservation.date }}</p>
+  <p><b>Time:</b> {{ reservation.time }}</p>
 </ng-container>
