--- a/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.scss
+++ b/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.scss
@@ -1,8 +1,5 @@
 .container {
-  width: 90%;
-  margin: 0 auto;
-  text-align: center;
-  padding: 20px;
+  padding: 36px;
 
   .title {
     font-size: 24px;
@@ -11,12 +8,15 @@
 
   .add {
     cursor: pointer;
+
     p {
       color: #3f51b5;
     }
   }
 }
 
-.add:first-of-type {
-  margin-top: 30px;
+.actions {
+  a {
+    padding: 0;
+  }
 }
