--- a/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.scss
+++ b/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.scss
@@ -1,19 +1,13 @@
 .container {
-  margin: 0px, auto;
-  width: 100%;
-  text-align: center;
-  padding: 16px 0;
+  padding: 36px;
+  max-width: 350px;
+  margin: 0 auto;
+
 
   .form {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
-    text-align: center;
     margin: 18px auto;
-    max-width: 350px;
   }
 
-  h1 {
-    margin-top: 10px;
-  }
 }
