--- a/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
@@ -3,5 +3,5 @@
   <p><b>Service:</b> {{ reservation.serviceType }}</p>
   <p><b>Employer:</b> {{ reservation.employee }}</p>
   <p><b>Date:</b> {{ reservation.date }}</p>
-  <p><b>Time:</b> {{ reservation.time }}</p>
+  <p><b>Time:</b> {{ getReadableTime(reservation.time) }}</p>
 </ng-container>
