--- a/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
@@ -42,8 +42,12 @@
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-      <mat-label for="time">Select Time</mat-label>
-      <input formControlName="time" matInput type="time" />
+      <mat-label>Select Time</mat-label>
+      <mat-select formControlName="time">
+        <mat-option *ngFor="let timeSlot of availableTimeSlots" [value]="timeSlot">{{
+          getReadableTime(timeSlot)
+        }}</mat-option>
+      </mat-select>
       <mat-error *ngIf="time.hasError('required')">This field is required</mat-error>
     </mat-form-field>
 
