--- a/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="reservation">
+  <p><b>Place:</b> {{ reservation.place }}</p>
   <p><b>Name:</b> {{ reservation.name }}</p>
   <p><b>Service:</b> {{ reservation.serviceType.displayName }}</p>
   <p><b>Employee:</b> {{ reservation.employee.displayName }}</p>
