--- a/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="reservation">
   <p><b>Place:</b> {{ reservation.place }}</p>
   <p><b>Name:</b> {{ reservation.name }}</p>
-  <p><b>Service:</b> {{ reservation.serviceType.displayName }}</p>
-  <p><b>Employee:</b> {{ reservation.employee.displayName }}</p>
+  <p><b>Service:</b> {{ reservation.serviceType.serviceTypeId }}</p>
+  <p><b>Employee:</b> {{ reservation.employee.name }}</p>
   <p><b>Date:</b> {{ getReadableDate(reservation.date) }}</p>
   <p><b>Time:</b> {{ getReadableTime(reservation.time) }}</p>
 </ng-container>
