enable any employee option to be selectable

--- a/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
@@ -31,6 +31,7 @@
     <mat-form-field appearance="fill">
       <mat-label for="employee">Employee</mat-label>
       <mat-select (selectionChange)="onEmployeeChange()" formControlName="employee">
+        <mat-option value="">Any Employee</mat-option>
         <mat-option *ngFor="let availableEmployee of availableEmployees" [value]="availableEmployee">
           {{ availableEmployee.name }}
         </mat-option>
