--- a/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-details/reservation-details.component.html
@@ -2,7 +2,7 @@
   <p><b>Place:</b> {{ reservation.place }}</p>
   <p><b>Name:</b> {{ reservation.name }}</p>
   <p><b>Service:</b> {{ reservation.serviceType.serviceName }}</p>
-  <p><b>Employee:</b> {{ reservation.employee.name }}</p>
+  <p *ngIf="reservation.employee.name"><b>Employee:</b> {{ reservation.employee.name }}</p>
   <p><b>Date:</b> {{ getReadableDate(reservation.date) }}</p>
   <p><b>Time:</b> {{ getReadableTime(reservation.time) }}</p>
 </ng-container>
