redirect new reservation to map

--- a/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation-summary/reservation-summary.component.html
@@ -6,7 +6,7 @@
       <mat-icon>event_available</mat-icon>
       Add to calendar
     </a>
-    <a mat-button routerLink="/reservation">
+    <a mat-button routerLink="/">
       <mat-icon>add_circle</mat-icon>
       Make another reservation
     </a>
