enable only available working days

--- a/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
@@ -46,6 +46,7 @@
         [matDatepicker]="picker"
         [max]="maxDate"
         [min]="minDate"
+        [matDatepickerFilter]="availableDateFilter"
         formControlName="date"
         matInput
       />
