load available segments

--- a/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
+++ b/projects/tu-cita/src/app/components/reservation/reservation/reservation.component.html
@@ -42,7 +42,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Date</mat-label>
       <input
-        (dateChange)="onDateChange()"
+        (dateChange)="onDateChange($event)"
         [matDatepicker]="picker"
         [max]="maxDate"
         [min]="minDate"
